# tirami

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  LAUNCH.md  README.md  SECURITY.md  WHITEPAPER.md  llms.txt
.github/workflows/: ci.yml  kani.yml  publish-crates.yml
crates/forge-agora/: Cargo.toml
crates/forge-agora/src/: lib.rs  marketplace.rs  matching.rs  registry.rs  reputation.rs  types.rs
crates/forge-bank/: Cargo.toml
crates/forge-bank/src/: futures.rs  insurance.rs  lib.rs  portfolio.rs  risk.rs  strategies.rs  types.rs  yield_optimizer.rs
crates/forge-cli/: Cargo.toml
crates/forge-cli/src/: daemon.rs  main.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: config.rs  error.rs  lib.rs  types.rs
crates/forge-infer/src/: distributed.rs  engine.rs  (+4 more)
crates/forge-ledger/: Cargo.toml
crates/forge-ledger/src/: agora.rs  anchor.rs  bitvm.rs  collusion.rs  ledger.rs  lending.rs  lib.rs  metrics.rs  safety.rs  zk.rs
crates/forge-ledger/tests/: loan_propagation.rs
crates/forge-lightning/: Cargo.toml
crates/forge-lightning/src/: lib.rs  node.rs  payment.rs
crates/forge-mind/: Cargo.toml
crates/forge-mind/src/: agent.rs  benchmark.rs  budget.rs  cu_paid_optimizer.rs  cycle.rs  harness.rs  lib.rs  meta_optimizer.rs  types.rs
crates/forge-net/: Cargo.toml
crates/forge-net/src/: cluster.rs  gossip.rs  lib.rs  transport.rs
crates/forge-node/: Cargo.toml
crates/forge-node/src/: agora_adapter.rs  api.rs  bank_adapter.rs  forward_pipeline.rs  lib.rs  mind_adapter.rs  node.rs  pipeline.rs  state_persist.rs  topology.rs
crates/forge-node/src/handlers/: agora.rs  bank.rs  mind.rs  mod.rs
crates/forge-proto/: Cargo.toml
crates/forge-proto/src/: messages.rs
crates/forge-shard/: Cargo.toml
crates/tirami-agora/: Cargo.toml
crates/tirami-agora/src/: errors.rs  lib.rs  marketplace.rs  matching.rs  registry.rs  reputation.rs  types.rs
crates/tirami-anchor/: Cargo.toml
crates/tirami-anchor/src/: anchorer.rs  base_client.rs  client.rs  lib.rs  proof.rs
crates/tirami-bank/: Cargo.toml
crates/tirami-bank/src/: errors.rs  futures.rs  insurance.rs  portfolio.rs  risk.rs  strategies.rs  types.rs  yield_optimizer.rs
crates/tirami-cli/: Cargo.toml
crates/tirami-cli/src/: daemon.rs  main.rs
crates/tirami-core/: Cargo.toml
crates/tirami-core/src/: attestation.rs  config.rs  error.rs  key_rotation.rs  lib.rs  types.rs
crates/tirami-infer/: Cargo.toml
crates/tirami-infer/src/: distributed.rs  engine.rs  gguf.rs  lib.rs  llama_engine.rs  model_registry.rs  rpc_manager.rs  token_stream.rs
crates/tirami-ledger/: Cargo.toml
crates/tirami-ledger/src/: agentnet.rs  agora.rs  agora_relay.rs  anchor.rs  audit.rs  audit_snark.rs  bitvm.rs  bootstrap_discovery.rs  checkpoint.rs  collusion.rs  fork.rs  governance.rs  kani_proofs.rs  ledger.rs  lending.rs  lib.rs  metrics.rs  nostr.rs  peer_qos.rs  peer_registry.rs  pq_hybrid.rs  safety.rs  staking.rs  sybil.rs  wal.rs  zk.rs
crates/tirami-ledger/tests/: loan_propagation.rs
crates/tirami-lightning/: Cargo.toml
crates/tirami-lightning/src/: lib.rs  node.rs  payment.rs
crates/tirami-mcp/: Cargo.toml
crates/tirami-mcp/src/: main.rs  tools.rs
crates/tirami-mind/: Cargo.toml
crates/tirami-mind/src/: agent.rs  agent_identity.rs  benchmark.rs  budget.rs  cu_paid_optimizer.rs  cycle.rs  errors.rs  federated.rs  lib.rs  meta_optimizer.rs  personal_agent.rs  types.rs
crates/tirami-net/: Cargo.toml
crates/tirami-net/src/: asn_rate_limit.rs  cluster.rs  connection.rs  discovery.rs  gossip.rs  lib.rs  tcp_tunnel.rs  transport.rs
crates/tirami-net/tests/: p2p_connection.rs
crates/tirami-node/: Cargo.toml
crates/tirami-node/src/: agent_loop.rs  agora_adapter.rs  api.rs  api_tokens.rs  bank_adapter.rs  forward_pipeline.rs  lib.rs  mind_adapter.rs  node.rs  pipeline.rs  security_tests.rs  state_persist.rs  topology.rs  wallet.rs
crates/tirami-node/src/handlers/: agent_discovery.rs  agent_identity.rs  agent_message.rs  agora.rs  anchor.rs  auth_did.rs  bank.rs  data_offer.rs  governance.rs  metrics.rs  mind.rs  mod.rs  nostr_publish.rs  purchase_intent.rs  tokenomics.rs  welcome_claim.rs
crates/tirami-proto/: Cargo.toml
crates/tirami-proto/src/: messages.rs
crates/tirami-sdk/: Cargo.toml
crates/tirami-sdk/src/: client.rs  error.rs  lib.rs  types.rs
crates/tirami-sdk/tests/: phase_15_api.rs
crates/tirami-shard/: Cargo.toml
crates/tirami-shard/src/: assigner.rs  lib.rs
crates/tirami-zkml-bench/: Cargo.toml
crates/tirami-zkml-bench-guest/: Cargo.toml  README.md
crates/tirami-zkml-bench-guest/src/: main.rs
crates/tirami-zkml-bench/src/: lib.rs
deploy/: public-testnet.env.example  tirami-public-testnet.service
docs/: README.md  THEORY-AUDIT.md  a2a-payment.md  agent-integration.md  architecture.md  bitvm-design.md  bootstrap.md  compatibility.md  concept.md  constitution.md  deploy-base-sepolia.md  developer-guide.md  e2e-demo-phase-15.md  economy.md  faq.md  hn-teaser-draft.md  killer-app.md  launch-phase19.md  migration-guide.md  monetary-theory.md  operator-guide.md  phase-14-design.md  phase-17-wave-2.7-base-deployment.md  phase-20-agent-action-economy.md  phase-21-stake-enforcement.md  phase-22-residual-yellow.md  phase-23-zkml-and-wallet.md  phase-24-wave-5-zk-backends.md  phase-24-zkml-real-backends.md  protocol-spec.md  public-api-surface.md  public-testnet-launch.md  release-readiness.md  roadmap.md  strategy.md  theory-audit-2026-04.md  threat-model.md  tirami-note-ja.md  whitepaper.md  zkml-strategy.md
docs/deployments/: README.md  global-scale-kubernetes.md
docs/security/: README.md  audit-scope.md  kani-proofs.md  known-issues.md  pgp-key-setup.md  phase-17-summary.md  threat-model-v2.md
examples/: demo.sh
marketing/: LAUNCH-CHECKLIST.md
marketing/posts/: reddit-cryptocurrency.md  reddit-machinelearning.md  twitter-en.md  twitter-ja.md  zenn-qiita-ja.md
mcp/: forge-mcp-server.py
scripts/: demo-e2e.sh  demo.sh  tirami-lab-agent-loop.sh  tirami-lab-node.sh  verify-impl.sh
sdk/python/: forge_sdk.py
(+23 files in other folders)
