[workspace]
members = [
    "crates/tirami-core",
    "crates/tirami-net",
    "crates/tirami-shard",
    "crates/tirami-infer",
    "crates/tirami-proto",
    "crates/tirami-ledger",
    "crates/tirami-node",
    "crates/tirami-cli",
    "crates/tirami-lightning",
    "crates/tirami-bank",
    "crates/tirami-mind",
    "crates/tirami-agora",
    "crates/tirami-sdk",
    "crates/tirami-mcp",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/clearclown/forge"
homepage = "https://github.com/clearclown/forge"
documentation = "https://github.com/clearclown/forge/tree/main/docs"
authors = ["clearclown and Forge contributors"]
readme = "README.md"

[workspace.dependencies]
# Internal crates — path + explicit version so `cargo publish` dry-run succeeds.
# When bumping, update `[workspace.package].version` and here simultaneously.
tirami-core = { path = "crates/tirami-core", version = "0.3.0" }
tirami-net = { path = "crates/tirami-net", version = "0.3.0" }
tirami-shard = { path = "crates/tirami-shard", version = "0.3.0" }
tirami-infer = { path = "crates/tirami-infer", version = "0.3.0" }
tirami-proto = { path = "crates/tirami-proto", version = "0.3.0" }
tirami-ledger = { path = "crates/tirami-ledger", version = "0.3.0" }
tirami-node = { path = "crates/tirami-node", version = "0.3.0" }
tirami-lightning = { path = "crates/tirami-lightning", version = "0.3.0" }
tirami-bank = { path = "crates/tirami-bank", version = "0.3.0" }
tirami-mind = { path = "crates/tirami-mind", version = "0.3.0" }
tirami-agora = { path = "crates/tirami-agora", version = "0.3.0" }
tirami-sdk = { path = "crates/tirami-sdk", version = "0.3.0" }
tirami-mcp = { path = "crates/tirami-mcp", version = "0.3.0" }

# MCP SDK
rmcp = { version = "1.2.0", features = ["server", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Crypto
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
rand = "0.8"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"

# Bitcoin Lightning
ldk-node = "0.4"

# Inference (llama.cpp via Rust bindings)
llama-cpp-2 = "0.1"

# Tokenization
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
hf-hub = "0.4"

# Networking (Iroh)
iroh = { version = "0.97", features = ["address-lookup-mdns"] }

# HTTP (for single-node API)
axum = "0.8"
tower = "0.5"
tokio-stream = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Pattern matching (for tirami-agora CapabilityMatcher)
glob = "0.3"

# Async trait (for tirami-mind MetaOptimizer with reqwest-backed CuPaidOptimizer)
async-trait = "0.1"

# WebSocket client for Nostr relay publishing
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Phase 10 — Prometheus metrics export for CollusionReport + ledger telemetry
prometheus = { version = "0.13", default-features = false }

# Phase 10 — Bitcoin OP_RETURN anchoring of trade Merkle root
bitcoin = { version = "0.32", default-features = false, features = ["std", "secp-recovery"] }
