[package]
name = "forge-agora"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Layer 4 of the Forge ecosystem: post-marketing agent marketplace with reputation aggregation, capability matching, and NIP-90/A2A discovery."

[dependencies]
forge-core = { workspace = true }
forge-ledger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
glob = { workspace = true }
