[package]
name = "forge-bank"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Layer 2 of the Forge ecosystem: financial instruments (strategies, portfolios, futures, insurance, risk) built on forge lending primitives."

[dependencies]
forge-core = { workspace = true }
forge-ledger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
