[package]
name = "forge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[[bin]]
name = "forged"
path = "src/daemon.rs"

[dependencies]
forge-core = { workspace = true }
forge-infer = { workspace = true }
forge-node = { workspace = true }
forge-ledger = { workspace = true }
iroh = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
