[package]
name = "forge-ledger"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
