[package]
name = "forge-lightning"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-core = { workspace = true }
ldk-node = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
