[package]
name = "forge-mind"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Layer 3 of the Forge ecosystem: AutoAgent-style self-improvement loops paid for in CU."

[dependencies]
forge-core = { workspace = true }
forge-ledger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
