[package]
name = "forge-net"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-core = { workspace = true }
forge-proto = { workspace = true }
tokio = { workspace = true }
iroh = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
forge-ledger = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
ed25519-dalek = { workspace = true }
