[package]
name = "forge-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-core = { workspace = true }
forge-net = { workspace = true }
forge-shard = { workspace = true }
forge-infer = { workspace = true }
forge-proto = { workspace = true }
forge-ledger = { workspace = true }
iroh = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
