[package]
name = "forge-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-core = { workspace = true }
forge-net = { workspace = true }
forge-shard = { workspace = true }
forge-infer = { workspace = true }
forge-proto = { workspace = true }
forge-ledger = { workspace = true }
forge-lightning = { workspace = true }
forge-bank = { workspace = true }
forge-mind = { workspace = true }
forge-agora = { workspace = true }
iroh = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
