[package]
name = "forge-proto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-core = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
