[package]
name = "tirami-bank"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true
description = "Layer 2 of the Forge ecosystem: financial instruments (strategies, portfolios, futures, insurance, risk) built on forge lending primitives."

[dependencies]
tirami-core = { workspace = true }
tirami-ledger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
