[package]
name = "tirami-infer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true
description = "llama.cpp inference engine integration for Tirami"

[features]
default = []
metal = ["llama-cpp-2/metal"]
cuda = ["llama-cpp-2/cuda"]

[dependencies]
tirami-core = { workspace = true }
llama-cpp-2 = { workspace = true }
tokenizers = { workspace = true }
hf-hub = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
