[package]
name = "tirami-ledger"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true
description = "Economic engine for Forge: CU accounting, trades, safety, Merkle root"

[dependencies]
tirami-core = { workspace = true }
tirami-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
prometheus = { workspace = true }
bitcoin = { workspace = true }
