[package]
name = "tirami-lightning"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true
description = "Bitcoin Lightning bridge for Forge CU settlement"

[dependencies]
tirami-core = { workspace = true }
ldk-node = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
