[package]
name = "tirami-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true
description = "Rust MCP server for the Forge compute economy — exposes CU endpoints as tools for Claude Code, Cursor, and AI agents"

[[bin]]
name = "tirami-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.2.0", features = ["server", "transport-io"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
