[package]
name = "tirami-mind"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true
description = "Layer 3 of the Forge ecosystem: AutoAgent-style self-improvement loops paid for in CU."

[dependencies]
tirami-core = { workspace = true }
sha2 = { workspace = true }
tirami-ledger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
