[package]
name = "tirami-net"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true
description = "P2P transport layer for Tirami using iroh QUIC + Noise encryption"

[dependencies]
tirami-core = { workspace = true }
tirami-proto = { workspace = true }
tokio = { workspace = true }
iroh = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tirami-ledger = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
ed25519-dalek = { workspace = true }
