[package]
name = "tirami-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
tirami-core = { workspace = true }
tirami-net = { workspace = true }
tirami-shard = { workspace = true }
tirami-infer = { workspace = true }
tirami-proto = { workspace = true }
tirami-ledger = { workspace = true }
tirami-lightning = { workspace = true }
tirami-bank = { workspace = true }
tirami-mind = { workspace = true }
tirami-anchor = { workspace = true }
tirami-agora = { workspace = true }
iroh = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
bitcoin = { workspace = true }
reqwest = { workspace = true }
