[package]
name = "tirami-shard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
tirami-core = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
