[package]
name = "tirami-zkml-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true
description = "zkML proof-generation + verification benchmark harness for Tirami. Phase 18.3."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tirami-core = { workspace = true }
tirami-ledger = { workspace = true }
# Phase 24 Wave 1 — Ed25519 attestation backend. Cryptographically
# meaningful proof (unforgeable without the private key) without
# pulling in the full zk-SNARK dep chain of ezkl/risc0/halo2.
ed25519-dalek = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

# Phase 18.3 — zkML backends are BEHIND features so the default
# workspace build stays lean. Enable explicitly for benchmarks.
#
# Example invocation:
#   cargo bench -p tirami-zkml-bench --features risc0
#
# The MockBackend is always available so the harness compiles
# (and has tests) without any real zk dep.
#
# Phase 24 Wave 5.0 — the `risc0` / `ezkl` / `halo2` features now
# wire up a *scaffold* implementation that is structurally honest:
# it produces a deterministic commitment with a backend-specific
# version prefix so receivers know which proof family to expect,
# but the commitment is NOT zero-knowledge yet. Real risc0-zkvm /
# ezkl crates land in Wave 5.1+ (see
# `docs/phase-24-wave-5-zk-backends.md`).
[features]
default = []
risc0 = []  # Wave 5.0: scaffold commitment; Wave 5.1+ wires risc0-zkvm
halo2 = []  # same shape; real halo2 lands separately
ezkl = []   # same shape; ezkl is git-vendored, landing separately
